Created attachment 58203 [details] RTF document with lists This types of lists are not recognized by the importer.
Works fine with Word 2007 and OpenOffice.org 3.1 (sorry, no never version installed). Tested With Windows XP / Vista 64. LibO 3.3.4, LibO 3.4.5 : bullets and numbering OK, but wrong left margin LibO 3.5.1 Beta1 : no bullets and numbering at all This is a regression (compared with OOo 3.1, but also with LibO 3.3 and 3.4)
Confirmed, implementation of this is indeed missing at the moment.
Miklos Vajna committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=eeafdc5602e422d2cdf2026c135e5ea3e18e89af fdo#47107 rtftok: initial PN (legacy numbering syntax) support
Miklos Vajna committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=ea04bbd697ad984cc4e39ed42994a072f052ba36 fdo#47107 rtftok: support bullet points in paragraph numberings
Miklos Vajna committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=63b78e6db15a76b9e928cb4a7d0d995bd12f9bf4 testcase for fdo#47107
Fixed in master, will ask for cherry-picking to -3-5 as well after giving it a bit more testing.
Miklos Vajna committed a patch related to this issue. It has been pushed to "libreoffice-3-5": http://cgit.freedesktop.org/libreoffice/core/commit/?id=d7e0c3e1d0fc155402d0d8f3ddbd12077005e5dd&g=libreoffice-3-5 fdo#47107 rtftok: initial PN (legacy numbering syntax) support It will be available in LibreOffice 3.5.3.
Miklos Vajna committed a patch related to this issue. It has been pushed to "libreoffice-3-5": http://cgit.freedesktop.org/libreoffice/core/commit/?id=586d6a57564c4c75c6464ec91c6f676aa66b0638&g=libreoffice-3-5 fdo#47107 rtftok: support bullet points in paragraph numberings It will be available in LibreOffice 3.5.3.
Migrating Whiteboard tags to Keywords: (filter:rtf) Replace rtf_filter -> filter:rtf. [NinjaEdit]