fdo#47107 rtftok: initial PN (legacy numbering syntax) support